--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
 hi there
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-analytics.js"></script>
+
+<script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+        apiKey: "AIzaSyB35ZOMGeY2pkToH7I6vdbvPuxQQq8FCoU",
+        authDomain: "pwa-nairio-com.firebaseapp.com",
+        databaseURL: "https://pwa-nairio-com.firebaseio.com",
+        projectId: "pwa-nairio-com",
+        storageBucket: "pwa-nairio-com.appspot.com",
+        messagingSenderId: "382627736494",
+        appId: "1:382627736494:web:aa0e9ba556a7096b73b63f",
+        measurementId: "G-T68PVDK68Y"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+</script>
